# os1

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml  qemu_wrapper.sh
.github/: README.md
.github/workflows/: docs.yml
linkers/: i686.ld
src/: boot.s  lib.rs  logger.rs  macros.rs  main.rs  memalloc.rs  multiboot.rs  testing.rs  tui.rs
src/interrupts/: gdt.rs  guard.rs  idt.rs  mod.rs
src/io/: mod.rs  rtc.rs  serial.rs  vga.rs
src/kernel/: Cargo.toml
src/kernel/src/: lib.rs  logger.rs  main.rs
src/kernel/src/devices/: keyboard.rs  timer.rs
src/kernel/src/drivers/: mod.rs
src/kernel/src/drivers/acpi/: mod.rs
src/kernel/src/drivers/apic/: io_apic.rs  local_apic.rs  mod.rs  registers.rs
src/kernel/src/graphics/: display.rs  mod.rs  primitives.rs
src/kernel/src/graphics/examples/: bounce.rs  magic_word.rs  mod.rs  snoopy.tga  tga.rs
src/kernel/src/interrupts/: gdt.rs  idt.rs  mod.rs
src/kernel/src/mm/: allocator.rs  mod.rs  paging.rs
src/kernel/src/task/: executor.rs  mod.rs
src/mem/: allocator.rs  mod.rs  paging.rs  segment.rs
src/task/: executor.rs  keyboard.rs
src/util/: bit_manipulation.rs  circular_buffer.rs  lock.rs  mod.rs
targets/: README.md  i686-unknown-none.json
tests/: alloc.rs  boot.rs  panic.rs  stackoverflow.rs
