[package]
name = "os1"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lints.clippy]
macro_metavars_in_unsafe = "allow"

[[bin]]
name = "os1"
bench = false

[dependencies]
hashbrown = "0.15"
spin = "0.9.8"
thiserror-no-std = "2.0.2"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
