[package]
name = "os1"
version = "0.0.1"
edition = "2021"
license = "MIT"


[lints.clippy]
new_without_default = "allow"

[[test]]
name = "panic"
harness = false

[[test]]
name = "stackoverflow"
harness = false

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
linked_list_allocator = "0.10.5"
pc-keyboard = "0.8.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.2"
volatile = "0.2.6"
x86_64 = "0.15.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
